# CarparkServer

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose-local.yml  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  test.py
.github/workflows/: deploy.yml
app/: SVYconverter.py  auth.py  config.ini  contextManager.py  fastAPIApp.py  filter.py  main.py  onemap.py  parsers.py  scheduler copy.py  scheduler.py  ura.py
db/: crud.py  database.py  lotPopulate.py  model.py
db/migrations/: env.py
db/migrations/versions/: 03f067f6d106_create_main_tables.py
db/my-db/: #ib_16384_0.dblwr
db/schemas/: bookingSchema.py  carparkSchema.py  favouriteSchema.py  lotSchema.py  userSchema.py
my-db/: auto.cnf  mysql.ibd
my-db/#innodb_redo/: #ib_redo0
test/: conftest.py
