[tool.poetry]
name = "carparkserver"
version = "0.1.0"
description = ""
authors = ["iloveangpao <mrlyrplease@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.89.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
