[tool.poetry]
name = "carparkserver"
version = "0.1.0"
description = ""
authors = ["iloveangpao <mrlyrplease@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.89.1"}
uvicorn = {extras = ["standard"], version = "^0.20.0"}
requests = "^2.28.2"
configparser = "^5.3.0"
sqlalchemy = "^2.0.5.post1"
pydantic = "^1.10.6"
rocketry = "^2.5.1"
pymysql = "^1.0.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
